Archive2/ad/cbfb9595fdcb68/output
main.cpp: In function 'int main()':
main.cpp:10:36: error: functional cast to array type 'state_type {aka char [64]}'
     state_type state = state_type ();
                                    ^
main.cpp:10:16: warning: unused variable 'state' [-Wunused-variable]
     state_type state = state_type ();
                ^
